versioned_docs/version-2026.1.1/professor/sergio_takahashi.mdx
---
sidebar_label: 'Sérgio Takahashi'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Sérgio Takahashi",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Desenho Técnico e Metrologia - 2585",
          "size": 3,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "MEC2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "DESENHO TÉCNICO (511)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "DESENHO TÉCNICO (513)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "DESENHO TÉCNICO (523)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "METROLOGIA (510)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2022-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "DESENHO TÉCNICO (511)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "DESENHO TÉCNICO (513)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "DESENHO TÉCNICO (523)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "METROLOGIA (510)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2022-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Metrologia - 1550",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "EIN2025"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Desenho Técnico e Metrologia - 2585",
          "size": 3,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "MEC2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Desenho Técnico - 132",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_desenho_tecnico_sala_5-2",
          "students": [
            "ELM2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Metrologia - 108",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_metrologia_b4",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Desenho Técnico - 132",
          "size": 2,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_desenho_tecnico_sala_5-2",
          "students": [
            "ELM2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Sérgio Takahashi

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

